--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,64 @@
 // Fonts
 @import url('https://fonts.bunny.net/css?family=Nunito');
-
 // Variables
 @import 'variables';
-
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+// Variables
+@import 'variables';
 // Bootstrap
-@import 'bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/bootstrap';
+body {
+    margin-top: 20px;
+    background: #FDFDFD;
+}
+@media (min-width: 0) {
+    .g-mr-15 {
+        margin-right: 1.07143rem !important;
+    }
+}
+@media (min-width: 0) {
+    .g-mt-3 {
+        margin-top: 0.21429rem !important;
+    }
+}
+.g-height-50 {
+    height: 50px;
+}
+.g-width-50 {
+    width: 50px !important;
+}
+@media (min-width: 0) {
+    .g-pa-30 {
+        padding: 2.14286rem !important;
+    }
+}
+.g-bg-secondary {
+    background-color: #fafafa !important;
+}
+.u-shadow-v18 {
+    box-shadow: 0 5px 10px -6px rgba(0, 0, 0, 0.15);
+}
+.g-color-gray-dark-v4 {
+    color: #777 !important;
+}
+.g-font-size-12 {
+    font-size: 0.85714rem !important;
+}
+.media-comment {
+    margin-top: 20px
+}
+.fixed {
+    width: 25%;
+    right: 15%;
+}
+.scrollit {
+    float: left;
+    width: 71%
+}
+.comment-form {
+    border: 1px solid #34dccc;
+    border-radius: 5px;
+    padding: 15px 15px 15px 15px;
+    background-color: floralwhite;
+}
